--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.15
+  build_runner: ^2.2.1
+  dio: ^4.0.6
+  dio_logger: ^4.0.8+8
 
 
 dev_dependencies:
